--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/maintenance-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/maintenance-page.html.twig
@@ -11,21 +11,54 @@
 #}
 {{ attach_library('sis/maintenance-page') }}
 
-{% extends "page.html.twig" %}
+<div class="premium-layout-wrapper">
+  <div class="layout-container">
 
-{% block page_top %}
-{% endblock %}
+    {% block page_main %}
+      <main role="main" vocab="http://schema.org" typeof="WebPageElement" property="mainContentOfPage">
+        <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+        <div class="layout-content">
+          {{ page.content }}
+        </div>{# /.layout-content #}
+      </main>
+    {% endblock %}
 
-{% block page_main %}
-  <main role="main" vocab="http://schema.org" typeof="WebPageElement" property="mainContentOfPage">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-    <div class="layout-content">
-      <div class="maintenance">
+    <footer class="footer">
+      <img class="footer__graphic" src="/{{ directory }}/dist/images/footer-graphic.svg" />
+      <div{{ create_attribute().addClass(['footer__inner', 'section', 'theme', 'theme-green']) }}>
+        <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
+          <path d="M1440,30V1.3l-240.4,12.3L950.4,0L939,9l-22.9-2.9L801.7,16.5l-625.5-2.9L164.8,3l-87.7,7.5L0,1.3V30H1440z"/>
+        </svg>
         <div class="container">
-          <h1 class="maintenance__title">{{ page_title }}</h1>
-          <div class="maintenance__content">{{ page.content }}</div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
-{% endblock %}
+      <div{{ create_attribute().addClass('footer__bottom') }}>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 footer__bottom-logo">
+              <a class="logo" href="/" title="Hjem" rel="home">
+                <img class="logo__image" src="/{{ directory }}/logo.svg" alt="Hjem">
+              </a>
+            </div>
+            <div class="col-xs-12 col-md-4 footer__bottom-address">
+              Ledreborg Alle 2A, 4320 Lejre
+            </div>
+            <div class="col-xs-12 col-md-4 footer__bottom-links">
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>{# /.layout-container #}
+
+</div>
