--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inline-navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inline-navigation.css
@@ -65,4 +65,38 @@
   .flickity-button:disabled {
     opacity: 0;
   }
+
+  &__pager-count {
+    width: 100%;
+    padding-right: var(--container-spacing);
+    padding-left: var(--container-spacing);
+    color: var(--color-gray);
+    font-size: var(--base-font-size-small);
+    text-align: center;
+
+    @media (--viewport-sm-min) {
+      display: none;
+    }
+
+    &--showing {
+      display: inline;
+
+      &-xs,
+      &-ms {
+        display: none;
+      }
+
+      @media (--viewport-xs-max) {
+        &-xs {
+          display: inline;
+        }
+      }
+
+      @media (--viewport-ms-min) and (--viewport-ms-max) {
+        &-ms {
+          display: inline;
+        }
+      }
+    }
+  }
 }
