--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/image-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/image-slideshow.css
@@ -3,11 +3,16 @@
  * Image slideshow.
  */
 
-.image-slideshow-wrapper {
-  position: relative;
-  width: 100%;
-  outline: none;
-  cursor: grab;
+.image-slideshow-wrapper .flickity-page-dots {
+  bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  & .image-slideshow-wrapper .flickity-page-dots .dot:not(:last-child) {
+    margin-right: 20px;
+  }
 
   .flickity-viewport {
     overflow: hidden;
@@ -21,99 +26,33 @@
   outline: none;
 }
 
-.image-slideshow-slide {
+/* Native carousel overwrite */
+.image-slideshow-wrapper .flickity-page-dots .dot {
   position: relative;
-  width: 100%;
-  height: 100vh;
-  max-height: 500px;
-
-  div:not(.contextual),
-  picture,
-  img {
-    display: block;
-    height: inherit;
-    max-height: inherit;
-  }
-
-  img {
-    width: 100%;
-    object-fit: cover;
-  }
-
-  &::before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    background-color: rgb(0 0 0 / 30%);
-    content: "";
-  }
-
-  &__content {
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    z-index: 2;
-    width: 90%;
-    max-width: 800px;
-    color: white;
-    text-align: center;
-    transform: translateY(20px) translateX(-50%);
-    opacity: 0;
-    transition: all .7s .3s;
-    will-change: transform;
-  }
-
-  &.is-selected {
-    .image-slideshow-slide__content {
-      transform: translateY(0) translateX(-50%);
-      opacity: 1;
-    }
-  }
+  width: 12px;
+  height: 12px;
+  margin: 20px 15px;
+  background-color: #ffffffbf;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 1;
+  transition: background-color .3s;
 }
 
-.image-slideshow-navigation {
+.image-slideshow-wrapper .flickity-page-dots .dot.is-selected:before {
   position: absolute;
-  bottom: 20px;
-  z-index: 1;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  outline: none;
+  top: 50%;
+  left: 50%;
+  width: 46px;
+  height: 46px;
+  background-color: #ffffff4d;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  content: "";
+}
 
-  &__dot {
-    width: 8px;
-    height: 8px;
-    margin-right: 20px;
-    background-color: white;
-    border-radius: 50%;
-    cursor: pointer;
-    opacity: .5;
-    transition: opacity .5s .1s;
-
-    &::before {
-      position: absolute;
-      top: 4px;
-      left: 4px;
-      width: 20px;
-      height: 20px;
-      border: solid 2px white;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: opacity .5s .1s;
-      content: "";
-    }
-
-    &.is-selected {
-      opacity: 1;
-
-      &::before {
-        opacity: .3;
-      }
-    }
-  }
+.flickity-page-dots .dot.is-selected {
+  width: 20px;
+  height: 20px;
+  opacity: 1;
 }
