--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
@@ -2,7 +2,6 @@
  * Type: Base.
  * Modal styling.
  */
-
 .ui-dialog:not(.ui-dialog-position-side) {
   /* stylelint-disable */
   top: 50% !important;
@@ -44,4 +43,10 @@
 #layout-builder-modal .form-composite > legend,
 #layout-builder-modal .label {
   display: table;
+}
+
+.js-text-format-wrapper {
+  .filter-wrapper {
+    overflow: visible;
+  }
 }
