--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -41,6 +41,13 @@
   &__content-item-label {
     min-width: 85px;
     font-weight: var(--heading-font-weight);
+    &-author-image {
+      width: 85px;
+      margin-right: 20px;
+      img {
+        width: 100%;
+      }
+    }
   }
 
   &__inspiration-title {
