--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -18,11 +18,11 @@
     }
   }
 
-  &__some__header {
+  &-some-header {
     margin-left: 3px;
   }
 
-  &__some__icons {
+  &-some-icons {
     display: flex;
     margin-top: 16px;
     margin-bottom: 20px;
@@ -31,13 +31,13 @@
     & > a:not(:first-child) {
       margin-left: 19px;
     }
-  }
 
-  &__facebook__wrapper, &__instagram__wrapper {
-   & .icon {
-    height: 39px;
-    width: 39px;
-   }
+    &__icon {
+     & .icon {
+      height: 39px;
+      width: 39px;
+     }
+    }
   }
 
   &__col2__description {
