--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -98,6 +98,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-3">
+              <h2>{{ 'Latest news'|t }}</h2>
+              {{ latest_news }}
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
               <div class="footer__some__header">
