SIS2-197: Make changes to blog post pages, create layout block for blogs, etc

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -3,6 +3,10 @@
   background-color: var(--color-white);
   box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
 
+  &.fixed-height {
+   height: 160px;
+  }
+
   &__title {
     padding: 6px 15px;
     color: var(--color-purple);
