--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -1,7 +1,70 @@
 .blog-post {
+
+  .all-writers {
+    .facts-box {
+      height: 240px;
+      overflow: hidden;
+    }
+  }
+
+  .view-all-writers-link {
+    display: flex;
+    text-decoration: underline;
+
+    &.hidden {
+     visibility: hidden;
+    }
+
+    &:hover {
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    svg {
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
+      padding-top: 10px;
+    }
+  }
+
+  &--view-all-writers {
+    margin-top: 25px;
+    display: none;
+
+    &.expanded {
+      display: block;
+    }
+
+    &--title {
+      display: flex;
+       justify-content: flex-end;
+
+      h3 {
+        flex: 75%;
+      }
+
+      .hide-all-writers-link {
+        flex: 25%;
+        text-align: right;
+        text-decoration: underline;
+        &:hover {
+          cursor: pointer;
+          text-decoration: none;
+        }
+        svg {
+          width: 20px;
+          height: 20px;
+          margin-left: 5px;
+          transform: rotate(180deg);
+        }
+      }
+    }
+  }
+
   &__date {
-    margin-top: 20px;
     max-width: 90%;
+    margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 5%;
     padding: 15px;
@@ -11,6 +74,11 @@
     @media (--viewport-md-min) {
       max-width: 58%;
     }
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
   }
 }
 
