--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -97,7 +97,7 @@
 
     &--blog {
       color: var(--color-purple-dark);
-      background-color: var(--color-purple);
+      background-color: var(--color-pink);
     }
   }
 
@@ -130,6 +130,19 @@
     font-size: var(--base-font-size-large);
     font-family: var(--heading-font-family);
     line-height: 1.3;
+
+    &--authoring-information {
+       padding-left: 20px;
+       font-size: var(--base-font-size-small);
+       margin-bottom: 10px;
+       margin-top: 10px;
+       font-weight: normal;
+     }
+
+    &--blog-post {
+      padding-left: 20px;
+      margin-bottom: 0 !important;
+    }
   }
 
   &__description {
