--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -52,6 +52,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
 
   &__item-inner {
@@ -74,6 +75,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    min-height: 25px;
 
     img {
       width: 100%;
@@ -134,7 +136,6 @@
     &--authoring-information {
        padding-left: 20px;
        font-size: var(--base-font-size-small);
-       margin-bottom: 10px;
        margin-top: 10px;
        font-weight: normal;
      }
