SIS2-196: Fix null var on twig template

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -102,7 +102,9 @@
       <div class="inspiration-overview__subject">
         {% if subject_items|length > 2 %}
           {% for item in subject_items|slice(0, 2) %}
-            <a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.tid.value}) }}">{{ item.entity.name.value }}</a>
+            {% if item.entity.tid.value %}
+              <a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.tid.value}) }}">{{ item.entity.name.value }}</a>
+            {% endif %}
           {% endfor %}
           <div class="inspiration-overview__subject-item--more-text">
             + {{ subject_items|length - 2 }} {{ 'subjects'|t }}
