--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--dot-on-map--full.html.twig
@@ -163,15 +163,15 @@
             </div>
           </div>
         {% endif %}
-        {% if node.field_media_downloads[0] %}
+        {% if node.field_files[0] %}
           <div class="facts-box">
             <div class="facts-box__title">
               Filer
             </div>
             <div class="facts-box__content">
-              {% for file in node.field_media_downloads %}
+              {% for file in node.field_files %}
                 <div class="facts-box__content-item">
-                  <a href="{{ file_url(file.entity.field_media_document.entity.uri.value) }}" target="_blank">{{ file.entity.name.value }}</a>
+                  <a href="{{ file_url(file.entity.uri.value) }}" target="_blank"> {{ file.entity.filename.value }}</a>
                 </div>
               {% endfor %}
             </div>
